Chapter 2 : Selecting and Updating Data

--- a/Python/Introduction to NumPy/takeaways.ipynb
+++ b/Python/Introduction to NumPy/takeaways.ipynb
@@ -31,7 +31,54 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Numpy array operations are very similar to list operations\n",
+    "- Indexing in numpy : `array[3]` will give the 4th element in 1-D array\n",
+    "- Indexing in numpy : `array[2, 4]` will give the element on 3rd row and 5th column in 2-D array\n",
+    "- first row in 2D array : `array_2d[0]`\n",
+    "- third column in 2D array : `array_2d[ : , 2]`\n",
+    "- slicing : `array_2d[3:6, 3:6]`\n",
+    "- slicing with every second element : `array_2d[3:6:2, 3:6:2]`\n",
+    "- sorting array values along the rows of the array : `np.sort(array_2d, axis=0)`\n",
+    "- sorting array values along the columns of the array : `np.sort(array_2d, axis=1)`\n",
+    "- numpy row concatenation : `np.concatenate((arr_1, arr_2), axis=0)`\n",
+    "- numpy col concatenation : `np.concatenate((arr_1, arr_2), axis=1)`\n",
+    "- numpy flattened value concatenation : `np.concatenate((arr_1, arr_2), axis=None)`\n",
+    "- numpy delete second row : `np.delete(some_array, 1, axis=0)` \n",
+    "- numpy delete second column : `np.delete(some_array, 1, axis=1)` \n",
+    "- numpy delete second element of flattened array : `np.delete(some_array, 1) ` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Way 1 : Filtering using indexing\n",
+    "\n",
+    "some_array[some_array[:, 1 ] % 2 == 0 ] \n",
+    "\n",
+    "# Way 2 : Filtering using 'where' keyword\n",
+    "\n",
+    "row_ind, column_ind = np.where(some_array[:, 1] % 2 == 0)\n",
+    "np.where(some_array[:, 1] % 2 == 0, \"\", some_array) # Replacing values\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
