Chapter 3 : Array Mathematics!

--- a/Python/Introduction to NumPy/takeaways.ipynb
+++ b/Python/Introduction to NumPy/takeaways.ipynb
@@ -79,6 +79,103 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Statistics functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- sum of an array: \n",
+    "    - Sum of the rows : `some_array.sum(axis=0 , keepdims=False)`\n",
+    "    - Sum of the columns : `some_array.sum(axis=1, keepdims=False)`\n",
+    "- Average of an array: \n",
+    "    - Average of the rows : `some_array.mean(axis=0, keepdims=False)`\n",
+    "    - Average of the columns : `some_array.mean(axis=1, keepdims=False)`\n",
+    "- Cumulative sum of an array: \n",
+    "    - Cumulative Sum of the rows : `some_array.cumsum(axis=0, keepdims=False)`\n",
+    "    - Cumulative Sum of the columns : `some_array.cumsum(axis=1, keepdims=False)`\n",
+    "- Minimum of an array: \n",
+    "    - Minimum Sum of the rows : `some_array.min(axis=0, keepdims=False)`\n",
+    "    - Minimum Sum of the columns : `some_array.min(axis=1, keepdims=False)`\n",
+    "- Maximum of an array: \n",
+    "    - Maximum Sum of the rows : `some_array.max(axis=0, keepdims=False)`\n",
+    "    - Maximum Sum of the columns : `some_array.max(axis=1, keepdims=False)`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/03.02.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mathematical operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Numpy multiplication:\n",
+    "    - Multiply with a scalar : `me_array * 3`\n",
+    "    - Elementwise multiplication : `array_a * array_b`\n",
+    "    - Matrix multiplication : `np.dot(array_a, array_b)`\n",
+    "- Numpy addition:\n",
+    "    - Multiply with a scalar : `me_array + 3`\n",
+    "    - Elementwise multiplication : `array_a + array_b`\n",
+    "- Numpy subtraction:\n",
+    "    - Multiply with a scalar : `me_array - 3`\n",
+    "    - Elementwise multiplication : `array_a - array_b`\n",
+    "- Vectorizing python functions:\n",
+    "```\n",
+    "vectorized_len = np.vectorize(len)\n",
+    "vectorized_len(string_array) > 2 # This is a mask\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Broadcasting compatibility"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- NumPy compares sets of array dimensions from right to left\n",
+    "- Two dimensions are compatible when their length or right-most digit...\n",
+    "    - One of them has a length of one or\n",
+    "    - They are of equal lengths\n",
+    "\n",
+    "<center><img src=\"images/03.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/03.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
