Chapter 4 : Array Transformations

--- a/Python/Introduction to NumPy/takeaways.ipynb
+++ b/Python/Introduction to NumPy/takeaways.ipynb
@@ -175,7 +175,95 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numpy image operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Extracting color channels\n",
+    "red_array = img_array[:, :, 0]\n",
+    "blue_array = img_array[:, :, 1]\n",
+    "green_array = img_array[:, :, 2]\n",
+    "\n",
+    "# Flipping image array in all dimensions\n",
+    "flipped_img = np.flip(img_array)\n",
+    "\n",
+    "# Flip specified dimensions\n",
+    "# axis 0 is row, axis 1 is column, axis 2 is channel or color\n",
+    "flipped_img2 = np.flip(img_array, axis=(0, 1)) # Flip only column and row\n",
+    "\n",
+    "# Transpose image dimensions\n",
+    "# Transposing will swap dimensions\n",
+    "transposed_img = np.transpose(img_array, axes=(1, 0, 2)) # Swapping first and second dimension\n",
+    "\n",
+    "# Split image channels\n",
+    "splitting_parts = 3\n",
+    "dimension_index_to_split = 2\n",
+    "red_array, green_array, blue_array = np.split(img_array, splitting_parts, axis=dimension_index_to_split)\n",
+    "red_array = red_array.reshape((3, 3))\n",
+    "\n",
+    "# Stacking color channels to create rgb image\n",
+    "new_dimension_index = 2\n",
+    "stacked_rgb = np.stack([red_array, green_array, blue_array], axis=2)\n",
+    "\n",
+    "# Show image\n",
+    "plt.imshow(img_array)\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Flip vs Transpose"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load and save numpy files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Loading Way 1\n",
+    "some_array = np.load('/path/filename.npy')\n",
+    "\n",
+    "# Loading Way 2\n",
+    "with open(\"filename.npy\", \"rb\") as f:\n",
+    "    some_array = np.load(f)\n",
+    "\n",
+    "# Saving Way 1\n",
+    "np.save('filename.npy', some_array)\n",
+    "\n",
+    "# Saving Way 2\n",
+    "with open(\"filename.npy\", \"wb\") as f:\n",
+    "    np.save(f, some_array)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
