Chapter 3 : Lambda functions and error-handling

--- a/Python/Python Data Science Toolbox (Part 1)/takeaways.ipynb
+++ b/Python/Python Data Science Toolbox (Part 1)/takeaways.ipynb
@@ -189,7 +189,51 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- lambda function : \n",
+    "    - Defining lambda function : `lambda_func = lambda x, y: x ** y`\n",
+    "    - Calling lambda function : `lambda_func(1,2)`\n",
+    "- map function : \n",
+    "    - Using map : `map(func_name, seq)`\n",
+    "    - example : `map(list, so)`\n",
+    "- filter function : \n",
+    "    - Using filter : `list( filter( boolean_func_name, seq ))`\n",
+    "    - example : `list (filter(lambda x : len(x) > 6 , some_list))`\n",
+    "- reduce funtion:\n",
+    "```\n",
+    "from functools import reduce\n",
+    "result = reduce(lambda x,y: x + y, num_list) # Will add all items of num_list into a single value\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try catch in python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "def sqrt(x):\n",
+    "    if x < 0:\n",
+    "        raise <ErrorType>('Exception message) # Exception is default errortype\n",
+    "    try:\n",
+    "        return x ** 0.5\n",
+    "    except <ErrorType>:\n",
+    "        print('Exception message')\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
