Chapter 2 : List comprehensions and generators

--- a/Python/Python Data Science Toolbox (Part 2)/takeaways.ipynb
+++ b/Python/Python Data Science Toolbox (Part 2)/takeaways.ipynb
@@ -104,6 +104,90 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List Comprehension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Normal List\n",
+    "new_list = [item + 1 for item in some_list]\n",
+    "\n",
+    "# Normal List with conditional\n",
+    "new_list1 = [item ** 2 for item in range(10) if item % 2 == 0] # \"if\" evaluation is on right if no \"else\" is present\n",
+    "new_list2 = [ item ** 2 if item % 2 == 0 else 0 for item in range(10)] # \"if\" evaluation is on left if \"else\" is present\n",
+    "\n",
+    "# Nested List\n",
+    "new_list = [(outer_loop_val, inner_loop_val) for outer_loop_val in range(0, 2) for inner_loop_val in range(6, 8)]\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionary Comprehension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Normal dictionary\n",
+    "new_dict = {num: -num for num in range(9)}\n",
+    "\n",
+    "# Dictionary with conditionals\n",
+    "new_dict = {k: v for k, v in some_dict.items() if v > 20}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generator Comprehension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Generator Function\n",
+    "def num_sequence(n):\n",
+    "    \"\"\"Generate values from 0 to n.\"\"\"\n",
+    "    i = 0\n",
+    "    while i < n:\n",
+    "        yield i\n",
+    "        i += 1\n",
+    "result = num_sequence(6)\n",
+    "# Iterating through result generator\n",
+    "for item in result:\n",
+    "\tprint(item)\n",
+    "\n",
+    "# Generator Comprehension\n",
+    "new_generator = (num for num in range(6))\n",
+    "# Iterating through new_generator\n",
+    "for item in new_generator:\n",
+    "\tprint(item)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
