Chapter 3 : Bringing it all together!

--- a/Python/Python Data Science Toolbox (Part 2)/takeaways.ipynb
+++ b/Python/Python Data Science Toolbox (Part 2)/takeaways.ipynb
@@ -188,7 +188,51 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dataframe to list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Way 1\n",
+    "df.values.tolist()\n",
+    "\n",
+    "# Way 2\n",
+    "[list(row) for row in df.iterrows()]\n",
+    "\n",
+    "# Way 3\n",
+    "rows = []\n",
+    "with open('dataset.csv') as file :\n",
+    "    rows.append(file.readline())\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Concatenating dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "data = pd.DataFrame()\n",
+    "data = data.append(df_new)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
