Chapter 3 : Working with relational databases in Python

--- a/Python/Introduction to Importing Data in Python/takeaways.ipynb
+++ b/Python/Introduction to Importing Data in Python/takeaways.ipynb
@@ -240,6 +240,49 @@
     "data = loadmat('datafile.mat')\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "### Way 1\n",
+    "from sqlalchemy import create_engine\n",
+    "# Connect to database\n",
+    "engine = create_engine('sqlite:///dbname.sqlite')\n",
+    "# See tables in the database\n",
+    "table_names = engine.table_names()\n",
+    "print(table_names)\n",
+    "# Open a connection to pass query\n",
+    "con = engine.connect()\n",
+    "# Execute query\n",
+    "rs = con.execute(\"SELECT * FROM Orders\")\n",
+    "# Store results of all rows\n",
+    "results = rs.fetchall()\n",
+    "# Print the result as list of tuples\n",
+    "print(list(results))\n",
+    "# Column names\n",
+    "column_names = rs.keys()\n",
+    "# Store the result in a dataframe\n",
+    "df = pd.DataFrame(results)\n",
+    "df.columns = column_names\n",
+    "# Close the connection to pass query\n",
+    "con.close()\n",
+    "\n",
+    "### Way 2\n",
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "engine = create_engine('sqlite:///dbname.sqlite') # or path\n",
+    "df = pd.read_sql_query(\"SELECT * FROM tableName\", engine)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
