Chapter 2 : Interacting with APIs to import data from the web

--- a/Python/Intermediate Importing Data in Python/takeaways.ipynb
+++ b/Python/Intermediate Importing Data in Python/takeaways.ipynb
@@ -101,6 +101,77 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import json file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import json\n",
+    "with open('filename.json', 'r') as file:\n",
+    "    json_data = json.load(file)\n",
+    "\n",
+    "for key, value in json_data.items():\n",
+    "    print(key + ':' + str(value))\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### python api"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import requests\n",
+    "url = 'http://www.omdbapi.com/?t=hackers'\n",
+    "r = requests.get(url)\n",
+    "json_data = r.json()\n",
+    "for key, value in json_data.items():\n",
+    "    print(key + ':', value)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- It means connectivity. \n",
+    "- I mean API is the messenger that takes requests and \n",
+    "- tells a system what you want to do and then returns the response back to you"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
