Chapter 3 : Diving deep into the Twitter API

--- a/Python/Intermediate Importing Data in Python/takeaways.ipynb
+++ b/Python/Intermediate Importing Data in Python/takeaways.ipynb
@@ -171,7 +171,40 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Twitter API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# apps.twitter.com\n",
+    "# Get keys and access tokens from application settings\n",
+    "\n",
+    "import tweepy, json\n",
+    "# Fill the fields\n",
+    "access_token = \"...\"\n",
+    "access_token_secret = \"...\"\n",
+    "consumer_key = \"...\"\n",
+    "consumer_secret = \"...\"\n",
+    "\n",
+    "# Create Streaming object and authenticate\n",
+    "stream = tweepy.Stream(consumer_key, consumer_secret, access_token, access_token_secret)\n",
+    "\n",
+    "# This line filters Twitter Streams to capture data by keywords:\n",
+    "stream.filter(track=['apples', 'oranges'])\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
