Chapter 2 : Text and categorical data problems

--- a/Python/Cleaning Data in Python/takeaways.ipynb
+++ b/Python/Cleaning Data in Python/takeaways.ipynb
@@ -74,6 +74,95 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Filter out inconsistent categorical data by comparing them with known categories using anti-join\n",
+    "- uppercase : `df['col'].str.upper()`\n",
+    "- lowercase : `df['col'].str.lower()`\n",
+    "- Remove character : `df['col'].str.strip('$')`\n",
+    "- Replace character : \n",
+    "    1. `df['col'] = df['col'].apply(lambda x: x.replace('_', '+'))`\n",
+    "    2. `df['col'] = df['col'].str.replace('_', '+')`\n",
+    "    3. `df['col'] = df['col'].str.replace(r'\\D+', '')`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Constraints"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Type constrains : data type\n",
+    "- Range constrains : Range of data\n",
+    "- Uniqueness constrains : Unique value of row\n",
+    "- Membership constain : Known member in a group (eg: month from 1 to 12, week from 1 to 7 etc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import pandas as pd\n",
+    "# Way 1 : Equal cut\n",
+    "group_names = ['0-200K', '200K-500K', '500K+']\n",
+    "df['cat'] = pd.qcut(df['range_col'], q = 3, labels = group_names)\n",
+    "\n",
+    "# Way 2 : More precise\n",
+    "ranges = [0,200000,500000,np.inf]\n",
+    "group_names = ['0-200K', '200K-500K', '500K+']\n",
+    "# Create income group column\n",
+    "df['cat'] = pd.cut(df['range_col'], bins=ranges, labels=group_names)\n",
+    "\n",
+    "# Way 3 : Mapping\n",
+    "mapping = {'MALE':'M', 'Male':'M', 'FEMALE':'F', 'Female':'F'}\n",
+    "df['cat'] = df['string_col'].replace(mapping)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "assert df['col'].dtype == 'int'\n",
+    "assert phone['Phone number'].str.contains(\"+|-\").any() == False\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
