Chapter 3 : Advanced data problems

--- a/Python/Cleaning Data in Python/takeaways.ipynb
+++ b/Python/Cleaning Data in Python/takeaways.ipynb
@@ -44,7 +44,9 @@
     "- Check for missing values\n",
     "- Check if dates are in proper format\n",
     "- Check for range of dates (if there are impossible values)\n",
-    "- Check for duplicates (both complete and partial)"
+    "- Check for duplicates (both complete and partial)\n",
+    "- Checking constrains\n",
+    "- cross-field validation : sanity / validity check using multiple fields"
    ]
   },
   {
@@ -162,7 +164,108 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Missing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Missing Completely at Random: \n",
+    "\t- No systematic relationship between a column's missing values and \n",
+    "    other or own values. \n",
+    "    - eg : errors when inputting data\n",
+    "2. Missing at Random: \n",
+    "\t- There is a systematic relationship between a \n",
+    "\tcolumn's missing values and other observed values.\n",
+    "    - eg : missing ozone data for high temperature\n",
+    "3. Missing not at Random: \n",
+    "\t- There is a systematic relationship between a \n",
+    "\tcolumn's missing values and unobserved values.\n",
+    "    - eg : missing temperature values for high temperature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handling Missing Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Show number of missing data\n",
+    "df.isna().sum()\n",
+    "\n",
+    "# Visualize missing data information\n",
+    "import missingno as msno\n",
+    "import matplotlib.pyplot as plt\n",
+    "msno.matrix(airquality)\n",
+    "plt.show()\n",
+    "\n",
+    "# Drop missing data\n",
+    "df_dropped = df.dropna(subset = ['col'])\n",
+    "\n",
+    "# Replace/impute missing data with single value\n",
+    "col_mean = df['col'].mean()\n",
+    "df_imputed = df.fillna({'col': col_mean})\n",
+    "\n",
+    "# Replace/impute missing data with series\n",
+    "series_imp = df['col1'] * 5\n",
+    "df_imputed = df.fillna({'col2':series_imp})\n",
+    "\n",
+    "# Missing values are not always \"NaN\". They can be blank, \"?\" or other symbols (rarely)\n",
+    "# Check for values through manual validations first\n",
+    "df[\"col\"].value_counts() # Look out for suspicious values\n",
+    "# Determine number of missing values in a column\n",
+    "df.isna().any()\n",
+    "df['col'].isnull().sum()\n",
+    "# Drop missing values\n",
+    "df.dropna(axis = 0) # Drop entire row for missing value (default)\n",
+    "df.dropna(axis = 1) # Drop entire column for missing value\n",
+    "# Drop missing values for specific column\n",
+    "df.dropna(subset = [\"col\"], axis = 0)\n",
+    "# Replace missing values\n",
+    "df[\"col\"].replace(np.nan, new_val)\n",
+    "df.fillna(0)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Date in pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Way 1\n",
+    "df[\"date_col\"] = pd.to_datetime(df[\"date_col\"], \n",
+    "                                infer_datetime_format=True,\n",
+    "                                errors='coerce')\n",
+    "# Way 2\n",
+    "df[\"date_col\"] = df[\"date_col\"].dt.strftime(\"%d-%m-%Y\")\n",
+    "# Extract month information\n",
+    "dataframe[\"date_col\"].dt.month\n",
+    "# Extract year information\n",
+    "dataframe[\"date_col\"].dt.year\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
