Chapter 4 : Record linkage

--- a/Python/Cleaning Data in Python/takeaways.ipynb
+++ b/Python/Cleaning Data in Python/takeaways.ipynb
@@ -266,6 +266,117 @@
     "dataframe[\"date_col\"].dt.year\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Minimum edit distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Minimum edit distance = Least amount of steps needed to transition one string to another\n",
+    "- These steps can be\n",
+    "    1. Insertion (a new character)\n",
+    "    2. Deletion (of a character)\n",
+    "    3. Substitution (Replacing a character)\n",
+    "    4. Transposition (Swapping 2 character position)\n",
+    "- The lower the distance, the closer the 2 strings are\n",
+    "<center><img src=\"images/04.01.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### String comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "### For comparing two strings\n",
+    "from thefuzz import fuzz\n",
+    "# Compare reeding vs reading\n",
+    "fuzz.WRatio('Reeding', 'Reading') # 86\n",
+    "\n",
+    "### For comparing a string with a series\n",
+    "from thefuzz import process\n",
+    "from fuzzywuzzy import process # Alternative\n",
+    "# Define string and array of possible matches\n",
+    "string = \"Houston Rockets vs Los Angeles Lakers\"\n",
+    "choices = pd.Series(['Rockets vs Lakers', 'Lakers vs Rockets',\n",
+    "'Houson vs Los Angeles', 'Heat vs Bulls'])\n",
+    "# Return highest 2 matches in format (string_in_series, similarity_score, index)\n",
+    "process.extract(string, choices, limit = 2) \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Record linkage : Removing duplicates before appending two different dataframes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import recordlinkage\n",
+    "\n",
+    "# Create indexing object\n",
+    "indexer = recordlinkage.Index()\n",
+    "\n",
+    "# Generate pairs blocked on a column name common in 2 dataframes\n",
+    "indexer.block('col')\n",
+    "pairs = indexer.index(df1, df2)\n",
+    "# See pairs\n",
+    "print(pairs)\n",
+    "\n",
+    "# Create a Compare object\n",
+    "compare_cl = recordlinkage.Compare()\n",
+    "\n",
+    "# Find exact matches for pairs of col1 and col2\n",
+    "compare_cl.exact('df1_col1', 'df2_col1', label='col1')\n",
+    "compare_cl.exact('df1_col2', 'df2_col2', label='col2')\n",
+    "\n",
+    "# Find close matches for pairs of surname and address_1 using string similarity\n",
+    "compare_cl.string('df1_col3', 'df2_col3', threshold=0.85, label='col3')\n",
+    "compare_cl.string('df1_col4', 'df2_col4', threshold=0.85, label='col4')\n",
+    "\n",
+    "# Find matches\n",
+    "potential_matches = compare_cl.compute(pairs, df1, df2)\n",
+    "# See potential matches\n",
+    "print(potential_matches)\n",
+    "# Filter matches where more than 2 columns match\n",
+    "matches = potential_matches[potential_matches.sum(axis = 1) => 2]\n",
+    "print(matches)\n",
+    "# See index\n",
+    "matches.index\n",
+    "# Get index of duplicates in df2\n",
+    "duplicate_rows = matches.index.get_level_values(1)\n",
+    "# Finding duplicates in df2\n",
+    "df2_duplicates = df2[df2.index.isin(duplicate_rows)]\n",
+    "# Finding rows in df2 that are not duplicates\n",
+    "df2_unique = df2[~df2.index.isin(duplicate_rows)]\n",
+    "# Link the DataFrames!\n",
+    "full_df = df1.append(df2_unique)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
