Chapter 3 : Time Zones and Daylight Saving

--- a/Python/Working with Dates and Times in Python/takeaways.ipynb
+++ b/Python/Working with Dates and Times in Python/takeaways.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 1"
+    "# Chapter 1 & Chapter 2"
    ]
   },
   {
@@ -50,11 +50,99 @@
     "ts = 1514665153.0\n",
     "# Convert to datetime from timestamp and print\n",
     "print(datetime.fromtimestamp(ts))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "```  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Timezone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from datetime import datetime, timedelta, timezone\n",
+    "from dateutil import tz\n",
+    "# Add or Replace timezone information\n",
+    "print(dt.replace(tzinfo=timezone.utc))\n",
+    "# create timezone of +5:30 UTC\n",
+    "IST = timezone(timedelta(hours=5, minutes=30))\n",
+    "# Timezone-aware datetime\n",
+    "dt = datetime(2017, 12, 30, 15, 9, 3, tzinfo = IST)\n",
+    "# Most useful function \"tz.gettz()\" when dealing with daylight saving situations\n",
+    "et = tz.gettz('America/New_York') # Another timezone\n",
+    "# Convert corresponding time to another timezone \n",
+    "print(dt.astimezone(et))\n",
+    "###### Ambiguous time #########\n",
+    "eastern = tz.gettz('US/Eastern')\n",
+    "first_1am = datetime(2017, 11, 5, 1, 0, 0, tzinfo = eastern)\n",
+    "# Check if there are multiple timespans (End of daylight saving time)\n",
+    "tz.datetime_ambiguous(first_1am)\n",
+    "second_1am = datetime(2017, 11, 5, 1, 0, 0, tzinfo = eastern)\n",
+    "# The folded timespan that recurs\n",
+    "second_1am = tz.enfold(second_1am)\n",
+    "# Duration in local time zone\n",
+    "(first_1am - second_1am).total_seconds()\n",
+    "# Duration in universal time \n",
+    "first_1am = first_1am.astimezone(tz.UTC)\n",
+    "second_1am = second_1am.astimezone(tz.UTC)\n",
+    "(second_1am - first_1am).total_seconds()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Start of Daylight Saving"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- There is a gap in local timezone\n",
+    "- However, converting in UTC will give the correct universal time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### End of Daylight Saving\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- There is a fold of multiple time span in the same local zone (ambiguous)\n",
+    "- We need to explicitly mention that if the time is ambiguous, the second time is the enfolded time\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
    ]
   },
   {
